# hand_off_to_rust

./: .gitignore  README.md  justfile  mix.exs  test_client.exs
docs/: how-it-works.md
lib/: hand_off_to_rust.ex
lib/hand_off_to_rust/: application.ex  fd_sender.ex  listener.ex
native/fd_sender/: Cargo.toml
native/fd_sender/src/: lib.rs
rust_handler/: Cargo.toml
rust_handler/src/: main.rs
scripts/: dev_node.sh
test/: hand_off_to_rust_test.exs
