[package]
name = "fd_sender"
version = "0.1.0"
edition = "2021"

[lib]
name = "fd_sender"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
nix = { version = "0.29", features = ["socket", "uio", "net", "fs"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
